--- a/hkuai_r/Module3/M3_Lab_1_R_read_explore_data.Rmd
+++ b/hkuai_r/Module3/M3_Lab_1_R_read_explore_data.Rmd
@@ -452,7 +452,7 @@ colnames(GI.czech) <- GI.cols
 head(GI.czech)
 ```
 
-
+ 
 ```{r}
 
 build_gi_food_data <- function(fullPath)
@@ -476,7 +476,11 @@ GI.data.all <- rbind_list(lapply(GI.csv.files, build_gi_food_data))
 head(GI.data.all)
 ```
 
-
+## Write Data  to Disk
+ 
+```{r}
+write.csv(x = GI.data.all, file = "gi_data.csv", row.names = FALSE)
+```
 
 
 
