--- a/QuantumComputation/bloch_sphere/bloch_sphere.ipynb
+++ b/QuantumComputation/bloch_sphere/bloch_sphere.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "When studying the dynamics of a two-level system, it is often convent to visualize the state of the system by plotting the state-vector or density matrix on the Bloch sphere. In QuTiP, we have created two different classes to allow for easy creation and manipulation of data sets, both vectors and data points, on the Bloch sphere. The qutip.Bloch class, uses Matplotlib to render the Bloch sphere, where as qutip.Bloch3d uses the Mayavi rendering engine to generate a more faithful 3D reconstruction of the Bloch sphere."
+    "When studying the dynamics of a two-level system, it is often convent to visualize the state of the system by plotting the state-vector or density matrix on the Bloch sphere. In QuTiP, we have created two different classes to allow for easy creation and manipulation of data sets, both vectors and data points, on the Bloch sphere. The qutip.Bloch class, uses Matplotlib to render the Bloch sphere, where as `qutip.Bloch3d` uses the Mayavi rendering engine to generate a more faithful 3D reconstruction of the Bloch sphere."
    ]
   },
   {
@@ -33,16 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# requires mayavi module\n",
-    "b3d = Bloch3d()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "b3d = Bloch3d()\n",
     "b3d.show()"
    ]
   },
