--- a/QuantumComputation/Connect_QVM_Quilc_Docker.ipynb
+++ b/QuantumComputation/Connect_QVM_Quilc_Docker.ipynb
@@ -6,78 +6,167 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import cmath\n",
-    "import itertools\n",
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "import shutil\n",
-    "import socket\n",
-    "import subprocess\n",
-    "import time\n",
     "from pyquil.api import ForestConnection\n",
     "from pyquil.latex import to_latex\n",
-    "from qutip import Bloch\n",
-    "from tempfile import mkdtemp\n",
-    "\n",
     "from pyquil import Program, get_qc\n",
     "from pyquil.gates import *\n",
-    "import numpy as np\n",
-    "from forest_utils import *\n",
-    "π = np.pi"
+    "from forest_utils import *"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<pyquil.api._base_connection.ForestConnection object at 0x11bdc9b10>\n"
+     ]
+    }
+   ],
    "source": [
     "fc = ForestConnection(sync_endpoint='http://127.0.0.1:' + \"5000\",\n",
-    "                      compiler_endpoint='tcp://127.0.0.1:' + \"5555\")"
+    "                      compiler_endpoint='tcp://127.0.0.1:' + \"5555\")\n",
+    "\n",
+    "print(fc)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<pyquil.api._base_connection.ForestConnection at 0x122d60590>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "circuit = Program()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "circuit = Program()\n",
     "ro = circuit.declare('ro', 'BIT', 1)\n",
     "circuit += MEASURE(0, ro[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]\n",
+      " [0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "qc = get_qc('1q-qvm', connection=fc)\n",
+    "circuit.wrap_in_numshots_loop(100)\n",
+    "executable = qc.compile(circuit)\n",
+    "result = qc.run(executable)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -90,25 +179,14 @@
        "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "qc = get_qc('1q-qvm', connection=fc)\n",
-    "circuit.wrap_in_numshots_loop(100)\n",
-    "executable = qc.compile(circuit)\n",
-    "result = qc.run(executable)\n",
     "result.T"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
